--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.acuitus</groupId>
-	<artifactId>z</artifactId>
+	<artifactId>audio-encoding</artifactId>
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>z</name>
+	<name>audio-encoding</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
